# docsie-dokuta-mcp

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-push.yml
app/: auth.py  config.py  main.py  models.py  rate_limit.py
app/services/: docsie_client.py  dokuta_client.py
app/tools/: catalog.py  video.py
helm/docsie-mcp/: Chart.yaml  values.yaml
helm/docsie-mcp/templates/: apisix-route.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  secret.yaml
